--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
             <div style="width: 750px; margin-left: 35px;">
                 <p class="heading" style="margin-top: 35px; font-size:30px;">SNIPPETS</p>
                 <p class="inner-text">
-                    Create your own snippets and share it with the community. You can use them in your code in a autocomplete module...
+                    Create your own snippets and share it with the community. You can use them in your code in a
+                    autocomplete module...
                 </p>
             </div>
         </div>
@@ -78,7 +79,7 @@
                 </p>
             </div>
         </div>
-        <div class="container">
+        <div class="container" style="margin-bottom: 30px;">
             <div style=" padding-left: 15px; margin-top: 15px;">
                 <img src="/images/image 6.png">
             </div>
@@ -90,6 +91,28 @@
             </div>
         </div>
     </div>
+
+    <div class="footer">
+        <div class="torque-text" style="font-size: 35px; width: 400px;">
+            <p>Torque</p>
+        </div>
+        <div class="footer-innertext">
+            <ul style="list-style: none;" class="footupdate">
+                <li><b style="font-size: 25px;">LINK OF INTEREST</b></li>
+                <li>FAQ</li>
+                <li>Twitter</li>
+                <li>Facebook</li>
+                <li>Youtube</li>
+            </ul>
+        </div>
+        <div class="footer-innertext">
+            <ul style="list-style: none; margin-left: 20px;" class="footupdate">
+                <li><b style="font-size: 23px;">COPYRIGHT Torque.dev&#169;2023</b></li>
+                <li>Email@Torque.com</li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 
 </html>
