having difficulties with nav bar rest all done

--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
 </head>
 
 <body>
+    <nav>
+        <ul class="menu">
+          <li class="logo"><a href="#">
+            <img src="images/Vector.png" width="50px">
+          </a></li>
+          <li class="item"><a href="#">Trends</a></li>
+          <li class="item"><a href="#">Featured</a></li>
+          <li class="item"><a href="#">Latest</a></li>
+          <li class="item button"><a href="#">Start Coding</a></li>
+          <li class="item button"><a href="#">Login</a></li>
+          <li class="item button" style="border: 1px solid gray; border-radius: 6px; filter: invert(1); padding: 7px;"><a href="#"><img src="images/Search_Icon.png" width="20px"></a></li>
+        </ul>
+      </nav>
     <div class="torque">
         <img src="images/Vector.png" width="100px">
         <p class="torque-text">Torque</p>
