updated nav bar

--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
 </head>
 
 <body>
-    <nav>
-        <ul class="menu">
-          <li class="logo"><a href="#">
-            <img src="images/Vector.png" width="50px">
-          </a></li>
-          <li class="item"><a href="#">Trends</a></li>
-          <li class="item"><a href="#">Featured</a></li>
-          <li class="item"><a href="#">Latest</a></li>
-          <li class="item button"><a href="#">Start Coding</a></li>
-          <li class="item button"><a href="#">Login</a></li>
-          <li class="item button" style="border: 1px solid gray; border-radius: 6px; filter: invert(1); padding: 7px;"><a href="#"><img src="images/Search_Icon.png" width="20px"></a></li>
+    <nav class="navbar">
+        <a href="#" class="logo">
+          <img src="/images/Vector.png" alt="Torque logo" >
+        </a>
+        <ul class="nav-links">
+          <li class="nav-item"><a href="#">Trends</a></li>
+          <li class="nav-item"><a href="#">Featured</a></li>
+          <li class="nav-item"><a href="#">Latest</a></li>
+          <li class="nav-item"><a href="#">Start Coding</a></li>
+          <li class="nav-item"><a href="#">Login</a></li>
         </ul>
+        <a href="#" class="search-button">
+            <img src="/images/Search_Icon.png" alt="Search button" >
+          </a>
       </nav>
     <div class="torque">
         <img src="images/Vector.png" width="100px">
