updated navbar with nav elements placed rightly

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
           <li class="nav-item"><a href="#">Trends</a></li>
           <li class="nav-item"><a href="#">Featured</a></li>
           <li class="nav-item"><a href="#">Latest</a></li>
-          <li class="nav-item"><a href="#">Start Coding</a></li>
-          <li class="nav-item"><a href="#">Login</a></li>
-        </ul>
-        <a href="#" class="search-button">
+          <li class="nav-item-button"><a href="#">Start Coding</a></li>
+          <li class="nav-item-login"><a href="#">Login</a></li>
+          <li class="search-button" style="margin-top: 5px;"><a href="#">
             <img src="/images/Search_Icon.png" alt="Search button" >
-          </a>
+          </a></li>
+        </ul>
       </nav>
     <div class="torque">
         <img src="images/Vector.png" width="100px">
